force-app/main/default/objects/OrderItem/fields/PMC_DH_ProtocolIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_ProtocolIdentifier__c</fullName>
    <description>This field will store the protocol ID for 3rd party scenario in SAP defined from I203 and will be linked to the sales order as part of I066 Interface update.</description>
    <label>Protocol Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>