force-app/main/default/objects/OrderItem/fields/PMC_DH_RequestNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_RequestNumber__c</fullName>
    <description>This field will be used in I066 and I203 to establish the relation between the request number for scheduling order and sales order</description>
    <label>Request Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>