force-app/main/default/objects/OrderItem/fields/PMC_DH_ShippedQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_ShippedQuantity__c</fullName>
    <label>Shipped Quantity</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>