force-app/main/default/objects/OrderItem/fields/PMC_SS_QuantityAccountsUoM__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_QuantityAccountsUoM__c</fullName>
    <description>Field to specify quantity in account&apos;s UOM</description>
    <formula>IF(  AND( 
         OR( Order.Account.PMC_SS_UnitofMeasure__r.Name =  &apos;STN&apos; , 
             Order.Account.PMC_SS_UnitofMeasure__r.Name =  &apos;MTN&apos; ), 
             TEXT( PMC_CPQ_UnitOfMeasure__c )  ==  Order.Account.PMC_SS_UnitofMeasure__r.Name), 
     Quantity  , 
     IF( AND(TEXT( PMC_CPQ_UnitOfMeasure__c ) = &apos;MTN&apos;, Order.Account.PMC_SS_UnitofMeasure__r.Name = &apos;STN&apos; ), 
         Quantity  *  $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.MTNtoSTN.PMC_SS_ConversionFactor__c, 
         IF( AND(TEXT( PMC_CPQ_UnitOfMeasure__c ) = &apos;STN&apos;, Order.Account.PMC_SS_UnitofMeasure__r.Name = &apos;MTN&apos; ), 
             Quantity * $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.STNtoMTN.PMC_SS_ConversionFactor__c , 
             0) ) )</formula>
    <label>Quantity (Account’s UoM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>