force-app/main/default/objects/OrderItem/fields/SendIntegrationResultEmail__c.field-meta.xml
<CustomField>
    <fullName>SendIntegrationResultEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Integration Result Email</label>
    <type>Checkbox</type>
</CustomField>