force-app/main/default/objects/OrderItem/fields/Sent_to_SAP_By__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_SAP_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sent to SAP By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LinesSentToSAP</relationshipName>
    <type>Lookup</type>
</CustomField>