force-app/main/default/objects/OrderItem/fields/TotalShippedQuantity__c.field-meta.xml
<CustomField>
    <fullName>TotalShippedQuantity__c</fullName>
    <description>Jira card &lt;GMDP-3164&gt; Field for Experience Cloud Direct Portal used to Order Report. Sum of ShipmentItem.PMC_CPQ_DeliveryQuantity__c where isTTVisible__c = TRUE and Shipment.Status != Delivery Deleted.</description>
    <label>Total Shipped Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>