force-app/main/default/objects/OrderItem/fields/UnitPriceForceOverride__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceForceOverride__c</fullName>
    <label>Unit Price Force Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>