force-app/main/default/objects/OrderItem/validationRules/PMC_CPQ_FPDOrderItemsReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_CPQ_FPDOrderItemsReadOnly</fullName>
    <active>true</active>
    <description>This rule is to prevent users from editing fields on FPD Order Product record except Integration User and System Administrator.</description>
    <errorConditionFormula>AND(NOT(ISCHANGED(PMC_CPQ_Floorprice__c)),
PRIORVALUE(ApprovalStatus__c) &lt;&gt; &quot;Rejected&quot;,
    NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
    AND(
        NOT($Profile.Name = &quot;System Administrator&quot;),
        NOT($Profile.Name = &quot;API Only profile&quot;),
        NOT($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
        NOT( CONTAINS($Profile.Name,&apos;Digital Hub&apos;))
    ),
    TEXT( SBQQ__Subscription__r.SBQQ__QuoteLine__r.PMC_CPQ_ContractType__c ) = &quot;FPD&quot;,  
    NOT(ISNEW()),
    OR(
        ISCHANGED(SBQQ__Activated__c),
        ISCHANGED(SBQQ__Status__c),
        ISCHANGED(AdjustedLineAmount),
        ISCHANGED(TotalAdjustedLineTaxAmount),
        ISCHANGED(SBQQ__Asset__c),
        ISCHANGED(AvailableQuantity),
        ISCHANGED(SBQQ__BillingFrequency__c),
        ISCHANGED(SBQQ__BillingType__c),
        ISCHANGED(SBQQ__BlockPrice__c),
        ISCHANGED(SBQQ__BookingsIndicator__c),
        ISCHANGED(SBQQ__BundleRoot__c),
        ISCHANGED(SBQQ__ChargeType__c),
        ISCHANGED(SBQQ__Contract__c),
        ISCHANGED(SBQQ__ContractAction__c),
        ISCHANGED(SBQQ__Contracted__c),
        ISCHANGED(ContractId),
        ISCHANGED(SBQQ__ContractingMethod__c),
        ISCHANGED(CurrencyIsoCode),
        ISCHANGED(SBQQ__DefaultSubscriptionTerm__c),
        ISCHANGED(SBQQ__DiscountSchedule__c),
        ISCHANGED(TotalAdjustmentDistAmount),
        ISCHANGED(TotalAdjustmentDistTaxAmount),
        ISCHANGED(EndDate),
        ISCHANGED(SBQQ__TaxAmount__c),
        ISCHANGED(SBQQ__UnproratedNetPrice__c),
        ISCHANGED(GrossUnitPrice),
        ISCHANGED(Description),
        ISCHANGED(LineNumber),
        ISCHANGED(ListPrice),
        ISCHANGED(OrderDeliveryGroupId),
        ISCHANGED(SBQQ__OrderedQuantity__c),
        ISCHANGED(SBQQ__OrderProductBookings__c),
        ISCHANGED(PricebookEntryId),
        ISCHANGED(SBQQ__PriceDimension__c),
        ISCHANGED(SBQQ__PriceSchedule__c),
        ISCHANGED(SBQQ__PricingMethod__c),
        ISCHANGED(TotalLineAdjustmentAmount),
        ISCHANGED(TotalLineAdjustmentTaxAmount),
        ISCHANGED(SBQQ__ProductSubscriptionType__c),
        ISCHANGED(RoundedLineAmount),
        ISCHANGED(TotalLineTaxAmount),
        ISCHANGED(SBQQ__ProrateMultiplier__c),
        ISCHANGED(SBQQ__QuotedListPrice__c),
        ISCHANGED(SBQQ__QuotedQuantity__c),
        ISCHANGED(SBQQ__QuoteLine__c),
        ISCHANGED(SBQQ__RequiredBy__c),
        ISCHANGED(SBQQ__RevisedOrderProduct__c),
        ISCHANGED(SBQQ__SegmentIndex__c),
        ISCHANGED(SBQQ__SegmentKey__c),
        ISCHANGED(SBQQ__DimensionType__c),
        ISCHANGED(SBQQ__ShippingAccount__c),
        ISCHANGED(ServiceDate),
        ISCHANGED(SBQQ__Subscription__c),
        ISCHANGED(SBQQ__SubscriptionPricing__c),
        ISCHANGED(SBQQ__SubscriptionTerm__c),
        ISCHANGED(SBQQ__SubscriptionType__c),
        ISCHANGED(SBQQ__TaxCode__c),
        ISCHANGED(SBQQ__TermDiscountSchedule__c),
        ISCHANGED(SBQQ__TerminatedDate__c),
        ISCHANGED(TotalAdjustmentAmount),
        ISCHANGED(TotalAdjustmentTaxAmount),
        ISCHANGED(TotalTaxAmount),
        ISCHANGED(SBQQ__UpgradedSubscription__c),
        ISCHANGED(PMC_CPQ_ShipTo__c),
        ISCHANGED(PMC_CPQ_Account__c),
        ISCHANGED(PMC_CPQ_Owner__c),
        AND(
            NOT(ISCHANGED(ApprovalStatus__c)),
            TEXT(ApprovalStatus__c)=&quot;Approved&quot;,
            OR(ISCHANGED(Agreed_Final_Price__c),            ISCHANGED(PMC_CPQ_FinalAgreedPrice__c))
        )
    )
)</errorConditionFormula>
    <errorMessage>This Order has been placed and is therefore locked from further modifications. Only the Final Agreed Price field for FPD Order Lines can be modified if it is not Approved. Any updates from SAP will be reflected here.</errorMessage>
</ValidationRule>