force-app/main/default/objects/OrderItem/validationRules/PMC_CPQ_NonFPDOrderItemsReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_CPQ_NonFPDOrderItemsReadOnly</fullName>
    <active>true</active>
    <description>This rule is to prevent users from editing Non FPD Order Product record except Integration User and System Administrator.</description>
    <errorConditionFormula>AND(
    NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
    AND(
        NOT($Profile.Name = &quot;System Administrator&quot;),       
        NOT($Profile.Name = &quot;API Only profile&quot;),
        NOT($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
        NOT(CONTAINS(LOWER($Profile.Name), &quot;digital hub&quot;)),
        NOT(CONTAINS(LOWER($Profile.Name), &quot;partner community&quot;))
    ),
    TEXT(SBQQ__Subscription__r.SBQQ__QuoteLine__r.PMC_CPQ_ContractType__c) &lt;&gt; &apos;FPD&apos;,
    NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>This Order has been placed and is therefore locked from further modifications. Any updates from SAP will be reflected here.</errorMessage>
</ValidationRule>